--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "description": "Gestão de Equipamentos Fotográficos",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",  
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^4.17.1"  
+    "@prisma/client": "^6.5.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^6.5.0"
   },
   "repository": {
-  "type": "git",
-  "url": "https://github.com/chnds/gestao-equipamentos.git"
+    "type": "git",
+    "url": "https://github.com/chnds/gestao-equipamentos.git"
   },
   "author": "",
   "license": "ISC"
