--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.17.1",
     "jsonwebtoken": "^9.0.2",
