--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 DATABASE_URL="postgresql://postgres:12345678@localhost:5432/rc?schema=public"
-JWT_SECRET=your_jwt_secret
+JWT_SECRET=12345678
 PORT=3000
