Configurações de segurança

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,9 @@
   "name": "gestao-equipamentos",
   "version": "1.0.0",
   "description": "Gestão de Equipamentos Fotográficos",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -13,6 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.17.1",
+    "helmet": "^8.1.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.5.0"
   },
