--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate": "node ./src/db/migrate.js",
+    "migrate:undo": "node ./src/db/migrate.js --undo"
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
@@ -16,6 +18,9 @@
     "helmet": "^8.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "memcached": "^2.2.2",
+    "mongodb": "^6.16.0",
+    "mongoose": "^8.14.0",
     "prisma": "^6.5.0",
     "xss-clean": "^0.1.4"
   },
