--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
     "migrate": "node ./src/db/migrate.js",
     "migrate:undo": "node ./src/db/migrate.js --undo"
   },
@@ -13,12 +14,10 @@
     "@prisma/client": "^6.5.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "memcached": "^2.2.2",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.0",
     "prisma": "^6.5.0",
@@ -33,9 +32,15 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
+    "dotenv": "^16.5.0",
     "eslint": "^9.22.0",
     "husky": "^9.1.7",
+    "jest": "^29.7.0",
     "lint-staged": "^15.5.0",
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "supertest": "^7.1.0"
+  },
+  "jest": {
+    "setupFiles": ["<rootDir>/jest.setup.js"]
   }
 }
