--- a/backend/package.json
+++ b/backend/package.json
@@ -37,10 +37,13 @@
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "lint-staged": "^15.5.0",
+    "mongodb-memory-server": "^10.1.4",
     "prettier": "^3.5.3",
     "supertest": "^7.1.0"
   },
   "jest": {
-    "setupFiles": ["<rootDir>/jest.setup.js"]
+    "setupFiles": [
+      "<rootDir>/jest.setup.js"
+    ]
   }
 }
